--- a/gradle.properties
+++ b/gradle.properties
@@ -1,7 +1,14 @@
 javaVersion=1.8
-kotlinVersion=1.2.40
-#junitVersion=4.12
+kotlinVersion=1.2.41
 nodePluginVersion=1.2.0
+
+kzenLibVersion=0.0.2
+
+kotlinxHtmlVersion=0.6.9
+reactVersion=16.3.1-pre.27-kotlin-1.2.30
+reactDomVersion=16.3.1-pre.27-kotlin-1.2.30
+kotlinStyledVersion=1.0.0-pre.27-kotlin-1.2.30
+
 
 # https://github.com/srs/gradle-node-plugin/issues/143
 org.gradle.daemon=false
