--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,34 +1,38 @@
 buildscript {
-//    ext {
-//        springBootVersion = '2.0.1.RELEASE'
-//    }
+    ext {
+        springBootVersion = '2.0.1.RELEASE'
+    }
     repositories {
         mavenCentral()
     }
     dependencies {
-//        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-        classpath("org.jetbrains.kotlin:kotlin-gradle-plugin:${kotlinVersion}")
-//        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
+        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
+        classpath("org.jetbrains.kotlin:kotlin-allopen:${kotlinVersion}")
     }
 }
 
 apply plugin: 'kotlin-platform-jvm'
-//apply plugin: 'application'
-//apply plugin: 'maven'
-
-//apply plugin: 'kotlin-spring'
-//apply plugin: 'org.springframework.boot'
-//apply plugin: 'io.spring.dependency-management'
+apply plugin: 'kotlin-spring'
+apply plugin: 'org.springframework.boot'
+apply plugin: 'io.spring.dependency-management'
 
 
 dependencies {
     expectedBy project(':common')
+    compile project(":client")
 
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8', version: kotlinVersion
     compile("org.jetbrains.kotlin:kotlin-reflect")
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
 
-    compile group: 'tech.kzen.lib', name: 'kzen-lib-jvm', version: '0.0.1'
+    compile('org.springframework.boot:spring-boot-starter-webflux')
+    compile('com.fasterxml.jackson.module:jackson-module-kotlin')
+    compile "com.google.guava:guava:25.0-jre"
 
+    compile group: 'tech.kzen.lib', name: 'kzen-lib-jvm', version: kzenLibVersion
+
+    testCompile('org.springframework.boot:spring-boot-starter-test')
+    testCompile('io.projectreactor:reactor-test')
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test', version: kotlinVersion
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-junit', version: kotlinVersion
 }
@@ -46,5 +50,12 @@ compileTestKotlin {
     kotlinOptions {
         freeCompilerArgs = ["-Xjsr305=strict"]
         jvmTarget = javaVersion
+    }
+}
+
+
+processResources {
+    from ('../client/build/dist/') {
+        into 'public'
     }
 }
