--- a/kzen-auto-jvm/build.gradle
+++ b/kzen-auto-jvm/build.gradle
@@ -1,6 +1,6 @@
 buildscript {
     ext {
-        springBootVersion = '2.0.1.RELEASE'
+        springBootVersion = '2.0.2.RELEASE'
     }
     repositories {
         mavenCentral()
@@ -58,4 +58,12 @@ processResources {
     from ('../client/build/dist/') {
         into 'public'
     }
+}
+
+
+jar {
+    enabled = true
+}
+bootJar {
+    classifier = 'boot'
 }
