--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,2 @@
 include 'kzen-auto-common', 'kzen-auto-js', 'kzen-auto-jvm'
+//include 'kzen-auto-common', 'kzen-auto-js', 'kzen-auto-jvm', 'kzen-auto-dist'
