added client-side model replication, added interactive crud, fixed empty project handling, factored out AutoContext, added CommandBus / ModelManager

--- a/kzen-auto-jvm/src/main/resources/notation/dummy/dummy.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/dummy/dummy.yaml
@@ -1,6 +1,4 @@
-MablexAction_Foo:
+new-action-name:
   is: "LogAction"
-  message: "MABL kkkkk"
-new-fooooo:
+dsfdsfsd-test:
   is: "LogAction"
-  message: "default message"
