actions on server work, added WebDriver{Selection, Installer, Context} and related model, moved ModelManager to common, added kzen-lib-common dependency, added PrintlnAction, added {Open, Close}Browser and GoTo, renamed AutoContext -> ClientContext, factored out ServerContext

--- a/kzen-auto-common/build.gradle
+++ b/kzen-auto-common/build.gradle
@@ -2,6 +2,11 @@ apply plugin: 'kotlin-platform-common'
 
 dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: kotlinVersion
+
+
+    compile group: 'tech.kzen.lib', name: 'kzen-lib-common', version: kzenLibVersion
+    
+
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-common', version: kotlinVersion
     testCompile group: 'org.jetbrains.kotlin', name: 'kotlin-test-annotations-common', version: kotlinVersion
 }
