--- a/kzen-auto-jvm/src/main/resources/notation/auto/auto-common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto/auto-common.yaml
@@ -10,10 +10,44 @@ Action:
 
 ###########################################################
 
+
+OpenBrowser:
+  abstract: true
+  is: Action
+  class: tech.kzen.auto.server.objects.OpenBrowser
+
+
+CloseBrowser:
+  abstract: true
+  is: Action
+  class: tech.kzen.auto.server.objects.CloseBrowser
+
+
+GoTo:
+  abstract: true
+  is: Action
+  class: tech.kzen.auto.server.objects.GoTo
+  location: "https://www.google.com/"
+  meta:
+    location: String
+
+
+###########################################################
+
+
 LogAction:
   abstract: true
   is: Action
   class: tech.kzen.auto.client.objects.action.LogAction
+  message: "default message"
+  meta:
+    message: String
+
+
+PrintlnAction:
+  abstract: true
+  is: Action
+  class: tech.kzen.auto.server.objects.PrintlnAction
   message: "default message"
   meta:
     message: String
