--- a/kzen-auto-jvm/src/main/resources/notation/dummy/dummy.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/dummy/dummy.yaml
@@ -2,8 +2,13 @@
   is: OpenBrowser
 "Go to Google":
   is: GoTo
-  location: "https://www.yahoo.com/"
-new-action-name:
-  is: GoTo
+  location: "https://www.google.com/"
+"Enter search terms":
+  is: SendKeys
+  xpath: '//*[@id="lst-ib"]'
+  text: "goat yoga"
+"Click search":
+  is: FormSubmit
+  xpath: '//*[@name="btnK"]'
 "Close Chrome":
   is: CloseBrowser
