stop auto-run on fail, factored out NotationConventions.mainPath, handle missing main path auto-creation, dependency fix, auto-init execution, renamed SystemArchitecture -> CpuArchitecture, renamed WebDriverSelection -> WebDriverOptionDao, added Windows+OsX ChromeDriver options, resource discovery in RestHandler

--- a/kzen-auto-js/build.gradle
+++ b/kzen-auto-js/build.gradle
@@ -13,7 +13,7 @@ dependencies {
 
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-js', version: kotlinVersion
     compile "org.jetbrains.kotlinx:kotlinx-html-js:${kotlinxHtmlVersion}"
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core:0.22.5'
+    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core-js:0.22.5'
 
     compile group: 'tech.kzen.lib', name: 'kzen-lib-js', version: kzenLibVersion
 
