--- a/gradle.properties
+++ b/gradle.properties
@@ -1,13 +1,23 @@
 javaVersion=1.8
-kotlinVersion=1.2.50
-nodePluginVersion=1.2.0
+kotlinVersion=1.2.61
 
-kzenLibVersion=0.0.5
+
+kzenLibVersion=0.0.6
+
+
+kotlinxIoVersion=0.0.8
+guavaVersion=26.0-jre
+kotlinxCoroutinesCoreVersion=0.25.0
+seleniumVersion=3.14.0
+
 
 kotlinxHtmlVersion=0.6.10
-reactVersion=16.4.1-pre.33-kotlin-1.2.50
-reactDomVersion=16.4.1-pre.33-kotlin-1.2.50
-kotlinStyledVersion=1.0.0-pre.33-kotlin-1.2.50
+reactVersion=16.4.2-pre.49-kotlin-1.2.60
+reactDomVersion=16.4.2-pre.49-kotlin-1.2.60
+kotlinStyledVersion=1.0.0-pre.49-kotlin-1.2.60
+
+
+nodePluginVersion=1.2.0
 
 
 # https://github.com/srs/gradle-node-plugin/issues/143
