--- a/kzen-auto-js/build.gradle
+++ b/kzen-auto-js/build.gradle
@@ -13,12 +13,10 @@ dependencies {
 
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-js', version: kotlinVersion
     compile "org.jetbrains.kotlinx:kotlinx-html-js:${kotlinxHtmlVersion}"
-    compile 'org.jetbrains.kotlinx:kotlinx-coroutines-core-js:0.22.5'
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core-js:${kotlinxCoroutinesCoreVersion}"
 
     compile group: 'tech.kzen.lib', name: 'kzen-lib-js', version: kzenLibVersion
 
-//    compile "org.jetbrains:kotlin-react:0.0.3-kotlin-1.1.50-eap-18"
-//    compile "org.jetbrains:kotlin-react-dom:0.0.5-kotlin-1.1.50-eap-18"
     compile "org.jetbrains:kotlin-react:$reactVersion"
     compile "org.jetbrains:kotlin-react-dom:$reactDomVersion"
 //    compile "org.jetbrains:kotlin-styled:$kotlinStyledVersion"
