--- a/kzen-auto-js/package.json
+++ b/kzen-auto-js/package.json
@@ -1,8 +1,9 @@
 {
   "name": "client",
   "dependencies": {
-    "react": "16.3.2",
-    "react-dom": "16.3.2"
+    "react": "16.4.2",
+    "react-dom": "16.4.2",
+    "lodash": "4.17.10"
   },
   "devDependencies": {
     "browser-sync": "2.23.6",
