--- a/kzen-auto-common/build.gradle
+++ b/kzen-auto-common/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'kotlin-platform-common'
 
 dependencies {
     compile group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-common', version: kotlinVersion
+    compile "org.jetbrains.kotlinx:kotlinx-coroutines-core-common:${kotlinxCoroutinesCoreVersion}"
 
 
     compile group: 'tech.kzen.lib', name: 'kzen-lib-common', version: kzenLibVersion
