--- a/kzen-auto-js/package.json
+++ b/kzen-auto-js/package.json
@@ -4,7 +4,8 @@
     "react": "16.4.2",
     "react-dom": "16.4.2",
     "lodash": "4.17.10",
-    "@material-ui/core": "3.0.3"
+    "@material-ui/core": "3.0.3",
+    "@material-ui/icons": "3.0.1"
   },
   "devDependencies": {
     "browser-sync": "2.23.6",
