added kotlin-styled, ActionController material design progress

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,24 +1,36 @@
 javaVersion=1.8
+
+
 kotlinVersion=1.2.61
+#kotlinVersion=1.2.70
 
 
 kzenLibVersion=0.0.7
+#kzenLibVersion=0.0.8
+
 
 
 kotlinxIoVersion=0.0.8
 guavaVersion=26.0-jre
-kotlinxCoroutinesCoreVersion=0.25.0
+
 seleniumVersion=3.14.0
 
+kotlinxCoroutinesCoreVersion=0.26.1
+kotlinxHtmlVersion=0.6.11
 
-kotlinxHtmlVersion=0.6.10
 reactVersion=16.4.2-pre.49-kotlin-1.2.60
 reactDomVersion=16.4.2-pre.49-kotlin-1.2.60
 kotlinStyledVersion=1.0.0-pre.49-kotlin-1.2.60
+#reactVersion=16.5.0-pre.54-kotlin-1.2.70
+#reactDomVersion=16.5.0-pre.54-kotlin-1.2.70
+#kotlinStyledVersion=1.0.0-pre.54-kotlin-1.2.70
+
+
+
 
 
 nodePluginVersion=1.2.0
 
-
 # https://github.com/srs/gradle-node-plugin/issues/143
 org.gradle.daemon=false
+
