--- a/kzen-auto-js/package.json
+++ b/kzen-auto-js/package.json
@@ -5,7 +5,9 @@
     "react-dom": "16.4.2",
     "lodash": "4.17.10",
     "@material-ui/core": "3.0.3",
-    "@material-ui/icons": "3.0.1"
+    "@material-ui/icons": "3.0.1",
+    "inline-style-prefixer": "3.0.5",
+    "styled-components": "3.4.9"
   },
   "devDependencies": {
     "browser-sync": "2.23.6",
