added IconButton and TextField, added some icons, use MaterialTextField in ParameterEditor, factored out NameEditor with click-to-edit, refactoring, switch from MaterialButton to MaterialIconButton, use icon flow arrows (wip)

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 javaVersion=1.8
 
-
+#see: https://stackoverflow.com/questions/52400620/cant-compile-project-on-linux-using-kotlin-1-2-70
 kotlinVersion=1.2.61
 #kotlinVersion=1.2.70
 
