ActionWrapper progress, refactoring some packages, cleanup, updated to kzen-lib 0.0.9, consolidated common PrintlnAction

--- a/kzen-auto-jvm/src/main/resources/notation/action/action-browser.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/action/action-browser.yaml
@@ -18,6 +18,7 @@ GoTo:
   abstract: true
   is: Action
   class: tech.kzen.auto.server.objects.GoTo
+  description: "Navigate to a new URL"
   location: "https://www.google.com/"
   meta:
     location: String
