--- a/gradle.properties
+++ b/gradle.properties
@@ -3,29 +3,31 @@ javaVersion=1.8
 #see: https://stackoverflow.com/questions/52400620/cant-compile-project-on-linux-using-kotlin-1-2-70
 kotlinVersion=1.2.61
 #kotlinVersion=1.2.71
+#kotlinVersion=1.3.0
 
 
-#kzenLibVersion=0.0.7
-kzenLibVersion=0.0.9
+#kzenLibVersion=0.0.9
+#kzenLibVersion=0.0.10
+kzenLibVersion=0.3.0
 
 
 
 kotlinxIoVersion=0.0.8
-guavaVersion=26.0-jre
+guavaVersion=27.0-jre
 
 seleniumVersion=3.14.0
 
 kotlinxCoroutinesCoreVersion=0.26.1
+#kotlinxCoroutinesCoreVersion=1.0.1
+
 kotlinxHtmlVersion=0.6.11
 
-reactVersion=16.4.2-pre.49-kotlin-1.2.60
-reactDomVersion=16.4.2-pre.49-kotlin-1.2.60
-kotlinStyledVersion=1.0.0-pre.49-kotlin-1.2.60
+reactVersion=16.5.2-pre.58-kotlin-1.3.0
+reactDomVersion=16.5.2-pre.58-kotlin-1.3.0
+kotlinStyledVersion=1.0.0-pre.58-kotlin-1.3.0
 #reactVersion=16.5.0-pre.54-kotlin-1.2.70
 #reactDomVersion=16.5.0-pre.54-kotlin-1.2.70
 #kotlinStyledVersion=1.0.0-pre.54-kotlin-1.2.70
-
-
 
 
 
