--- a/gradle.properties
+++ b/gradle.properties
@@ -1,33 +1,33 @@
 javaVersion=1.8
 
 #see: https://stackoverflow.com/questions/52400620/cant-compile-project-on-linux-using-kotlin-1-2-70
-kotlinVersion=1.2.61
-#kotlinVersion=1.2.71
+#kotlinVersion=1.2.61
 #kotlinVersion=1.3.0
+kotlinVersion=1.3.10
 
 
-#kzenLibVersion=0.0.9
-#kzenLibVersion=0.0.10
-kzenLibVersion=0.3.2
+#kzenLibVersion=0.3.2
+kzenLibVersion=0.3.3
 
 
 
 kotlinxIoVersion=0.0.8
-guavaVersion=27.0-jre
+guavaVersion=27.0.1-jre
 
 seleniumVersion=3.14.0
 
-kotlinxCoroutinesCoreVersion=0.26.1
-#kotlinxCoroutinesCoreVersion=1.0.1
+#kotlinxCoroutinesCoreVersion=0.26.1
+kotlinxCoroutinesCoreVersion=1.0.1
 
 kotlinxHtmlVersion=0.6.11
 
-#reactVersion=16.5.2-pre.58-kotlin-1.3.0
-#reactDomVersion=16.5.2-pre.58-kotlin-1.3.0
-#kotlinStyledVersion=1.0.0-pre.58-kotlin-1.3.0
-reactVersion=16.5.0-pre.54-kotlin-1.2.70
-reactDomVersion=16.5.0-pre.54-kotlin-1.2.70
-kotlinStyledVersion=1.0.0-pre.54-kotlin-1.2.70
+# TODO: update when latest language version variant is available
+#reactVersion=16.6.0-pre.60-kotlin-1.3.0
+#reactDomVersion=16.6.0-pre.60-kotlin-1.3.0
+#kotlinStyledVersion=1.0.0-pre.60-kotlin-1.3.0
+reactVersion=16.5.2-pre.58-kotlin-1.3.0
+reactDomVersion=16.5.2-pre.58-kotlin-1.3.0
+kotlinStyledVersion=1.0.0-pre.58-kotlin-1.3.0
 
 
 
