--- a/gradle.properties
+++ b/gradle.properties
@@ -1,33 +1,31 @@
 javaVersion=1.8
 
-#see: https://stackoverflow.com/questions/52400620/cant-compile-project-on-linux-using-kotlin-1-2-70
-#kotlinVersion=1.2.61
-#kotlinVersion=1.3.0
-kotlinVersion=1.3.10
+kotlinVersion=1.3.20
 
 
-#kzenLibVersion=0.3.2
-kzenLibVersion=0.3.3
+#kzenLibVersion=0.3.3
+kzenLibVersion=0.4.2
 
 
 
-kotlinxIoVersion=0.0.8
+kotlinxIoVersion=0.1.4
 guavaVersion=27.0.1-jre
 
-seleniumVersion=3.14.0
+#seleniumVersion=3.14.0
+seleniumVersion=3.141.59
 
 #kotlinxCoroutinesCoreVersion=0.26.1
-kotlinxCoroutinesCoreVersion=1.0.1
+kotlinxCoroutinesCoreVersion=1.1.1
 
-kotlinxHtmlVersion=0.6.11
+kotlinxHtmlVersion=0.6.12
 
 # TODO: update when latest language version variant is available
-#reactVersion=16.6.0-pre.60-kotlin-1.3.0
-#reactDomVersion=16.6.0-pre.60-kotlin-1.3.0
-#kotlinStyledVersion=1.0.0-pre.60-kotlin-1.3.0
-reactVersion=16.5.2-pre.58-kotlin-1.3.0
-reactDomVersion=16.5.2-pre.58-kotlin-1.3.0
-kotlinStyledVersion=1.0.0-pre.58-kotlin-1.3.0
+#reactVersion=16.5.2-pre.58-kotlin-1.3.0
+#reactDomVersion=16.5.2-pre.58-kotlin-1.3.0
+#kotlinStyledVersion=1.0.0-pre.58-kotlin-1.3.0
+reactVersion=16.6.0-pre.68-kotlin-1.3.20
+reactDomVersion=16.6.0-pre.68-kotlin-1.3.20
+kotlinStyledVersion=1.0.0-pre.68-kotlin-1.3.20
 
 
 
