--- a/kzen-auto-js/build.gradle
+++ b/kzen-auto-js/build.gradle
@@ -92,7 +92,8 @@ task runKarma(type: YarnTask, dependsOn: [populateNodeModules, yarnInstall]) {
     test.dependsOn runKarma
 }
 
-// Recompiles sources on file changes. Invoke 'gradle client:run' and 'gradle -t client:watch' for hot reload.
+// Recompiles sources on file changes. Invoke 'gradle kzen-auto-js:run' and 'gradle -t kzen-auto-js:watch' for hot reload.
+// https://stackoverflow.com/questions/54443916/kotlin-1-3-20-with-gradle-5-1-1-compilekotlin2js-execute-hot-reload
 task watch {
     inputs.files 'src/main'
     doLast {
