--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ javaVersion=1.8
 kotlinVersion=1.3.20
 
 
-#kzenLibVersion=0.3.3
-kzenLibVersion=0.4.2
+#kzenLibVersion=0.4.2
+kzenLibVersion=0.4.3-SNAPSHOT
 
 
 
