--- a/kzen-auto-jvm/src/main/resources/notation/action/action-common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/action/action-common.yaml
@@ -2,15 +2,27 @@
 
 ###########################################################
 
+ResultCodec:
+  abstract: true
+  class: tech.kzen.auto.common.api.ResultCodec
+
+
+NullCodec:
+  is: ResultCodec
+  class: tech.kzen.auto.common.objects.codec.NullCodec
+
 
 Action:
   abstract: true
   class: tech.kzen.auto.common.api.AutoAction
   description: "Perform action"
+  value: NullCodec
+  detail: NullCodec
   meta:
     icon: String
     description: String
-
+    value: ResultCodec
+    detail: ResultCodec
 
 
 ###########################################################
