--- a/kzen-auto-jvm/src/main/resources/notation/auto/auto-framework.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto/auto-framework.yaml
@@ -20,10 +20,12 @@ ActionWrapper:
 
 ###########################################################
 
-
 AutoProject:
   abstract: true
   class: tech.kzen.auto.client.objects.AutoProject.Wrapper
+  actionManager: ActionManager
+  meta:
+    actionManager: ActionManager
 
 
 ActionController:
