--- a/kzen-auto-jvm/src/main/resources/notation/action/action-common.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/action/action-common.yaml
@@ -2,27 +2,40 @@
 
 ###########################################################
 
-ResultCodec:
-  abstract: true
-  class: tech.kzen.auto.common.api.ResultCodec
+#ResultCodec:
+#  abstract: true
+#  class: tech.kzen.auto.common.api.ResultCodec
 
 
-NullCodec:
-  is: ResultCodec
-  class: tech.kzen.auto.common.objects.codec.NullCodec
+#NullCodec:
+#  is: ResultCodec
+#  class: tech.kzen.auto.common.objects.codec.NullCodec
 
 
 Action:
   abstract: true
   class: tech.kzen.auto.common.api.AutoAction
   description: "Perform action"
-  value: NullCodec
-  detail: NullCodec
+#  value: NullCodec
+#  detail: NullCodec
   meta:
     icon: String
     description: String
-    value: ResultCodec
-    detail: ResultCodec
+#    value: ResultCodec
+#    detail: ResultCodec
+
+
+ActionManager:
+  class: tech.kzen.auto.common.objects.service.ActionManager
+  definer: ActionManager.definer/Definer
+  creator: ActionManager.creator/Creator
+
+ActionManager.definer/Definer:
+  class: tech.kzen.auto.common.objects.service.ActionManagerDefiner
+
+ActionManager.creator/Creator:
+  class: tech.kzen.auto.common.objects.service.ActionManagerCreator
+
 
 
 ###########################################################
