added ExecutionIntent, ActionManager refactoring progress, improved next-to-run action style

--- a/kzen-auto-jvm/src/main/resources/notation/auto/auto-framework.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto/auto-framework.yaml
@@ -27,10 +27,10 @@ ActionManager:
   creator: ActionManager.creator/Creator
 
 ActionManager.definer/Definer:
-  class: tech.kzen.auto.client.service.action.ActionManagerDefiner
+  class: tech.kzen.auto.client.objects.action.ActionManager$Definer
 
 ActionManager.creator/Creator:
-  class: tech.kzen.auto.client.service.action.ActionManagerCreator
+  class: tech.kzen.auto.client.objects.action.ActionManager$Creator
 
 
 ###########################################################
