fixed empty script handling, improved colours

--- a/kzen-auto-jvm/src/main/resources/notation/action/action-browser.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/action/action-browser.yaml
@@ -60,6 +60,7 @@ FormSubmit:
   abstract: true
   is: Action
   class: tech.kzen.auto.server.objects.FormSubmit
+  icon: Send
   title: "Submit a form"
   xpath: ""
   meta:
