--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,8 @@ javaVersion=1.8
 kotlinVersion=1.3.20
 
 
-#kzenLibVersion=0.4.3
-kzenLibVersion=0.4.4-SNAPSHOT
-
+#kzenLibVersion=0.4.4-SNAPSHOT
+kzenLibVersion=0.4.4
 
 
 kotlinxIoVersion=0.1.4
