--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ javaVersion=1.8
 kotlinVersion=1.3.20
 
 
-#kzenLibVersion=0.4.4-SNAPSHOT
-kzenLibVersion=0.4.5
+#kzenLibVersion=0.4.5
+kzenLibVersion=0.5.0-SNAPSHOT
 
 
 kotlinxIoVersion=0.1.4
