--- a/kzen-auto-jvm/src/main/resources/notation/auto/auto-toolbar.yaml
+++ b/kzen-auto-jvm/src/main/resources/notation/auto/auto-toolbar.yaml
@@ -54,7 +54,8 @@ RibbonController:
         is: Action
     ribbonGroups:
       is: List
-      of: ObjectLocation
+#      of: ObjectLocation
+      of: RibbonGroup
       definer: AutowiredAttributeDefiner
       find:
         is: RibbonGroup
